Simplifying seed and running scripts. Updating logs handling.